Change 'debouchés' with 'opportunités'

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "Modules": "Modules",
     "Projects": "Projects",
     "Disciplines": "Disciplines",
-    "Careers": "Career Opportunities",
+    "Careers": "Opportunities",
     "Social": "Contact & Network",
     "Testimonies": "Testimonies",
     "À Propos de SIGL" : "About SIGL",
