--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -176,7 +176,7 @@
     "BizDev" : "Business Developper",
 
     "Facebook" : "Nous rejoindre sur Facebook",
-    "Contact" : "Nous contacter",
+    "Contact" : "Posez nous vos questions",
 
     "MTI" :  "MTI (Multimédia et Technologies de l'Information)",
     "CSI" : "Recherche CSI (Calcul Scientifique et Image)",
