--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -48,7 +48,7 @@
     "LM_URSI" : "URSI : Urbanisation des SI",
     "LM_VIT1" : "VIRT : Virtualisation et Transformation IT",
     "LM_ARCL" : "ARCL : Architecture Cloud",
-    "LM_SOAR" : "SOAR : Solution Architecture ( + TD infrastructure & Projet PMS)",
+    "LM_SOAR" : "SOAR : Solution Architecture",
     "LM_ARLA" : "ARLA : Architecture Logicielle",
     "LM_MEPA" : "MEPA : Mise en pratique agile",
     "LM_ACOO" : "ACOO : Analyse et Conception Orienté Objet",
@@ -82,10 +82,6 @@
     "LM_COIN_text1" : "Apprendre à se connaître",
     "LM_COIN_text2" : "Développer son savoir-être",
     "LM_COIN_text3" : "Avoir des clés pour mieux communiquer et travailler en équipe",
-
-    "LM_ARLA_text1" : "Maîtriser les grands concepts et principes d’architecture logicielle",
-    "LM_ARLA_text2" : "Positionner l’architecture et l’architecte dans l’organisation",
-    "LM_ARLA_text3" : "Savoir analyser la pertinence de technologies logicielles pour chaque besoin",
    
     "LM_URSI_text1" : "Découvrir la réalité d’un SI à l’échelle de l'entreprise",
     "LM_URSI_text2" : "Comprendre le socle middleware qui le supporte ",
@@ -96,6 +92,9 @@
     "LM_VIT1_text2" : "Fournir les notions de base de la construction d’une étude de ROI",
     "LM_VIT1_text3" : "Dérouler ces notions ensemble autour de cas de virtualisation d’infrastructure IT",
     "LM_VIT1_text4" : "Fournir les connaissances technologiques autour de la virtualisation",
+    "LM_VIT1_text5" : "Discuter du modèle financier et technologique autour du Cloud",
+    "LM_VIT1_text6" : "Appréhender une démarche non sollicitée chez un client attiré par l’attrait du Business Case",
+    "LM_VIT1_text7" : "Appréhender une démarche de consulting de haut niveau chez un client avec démarche de transformation globale à grande échelle",
    
     "LM_ARCL_text1" : "Valider les acquis d’une méthode d’architecture en concevant un Cloud et une application Cloud-Based",
     "LM_ARCL_text2" : "Développer les connaissances autour d’un Cloud Computing",
@@ -104,6 +103,10 @@
     "LM_SOAR_text1" : "Comprendre et appliquer une démarche de « solution architecture »",
     "LM_SOAR_text2" : "Comprendre les enjeux et composants de l’infrastructure",
     
+    "LM_ARLA_text1" : "Maîtriser les grands concepts et principes d’architecture logicielle",
+    "LM_ARLA_text2" : "Positionner l’architecture et l’architecte dans l’organisation",
+    "LM_ARLA_text3" : "Savoir analyser la pertinence de technologies logicielles pour chaque besoin",
+
     "LM_ARLA_text" : "Acquérir les bases de l'Architecture logicielle",
     
     "LM_MEPA_text1" : "Connaissance générale des problématiques de productivité des développements",
@@ -115,8 +118,10 @@
     "LM_ACOO_text3" : "Réussite de certains tests d’admissions",
     "LM_ACOO_text4" : "Effectuer une démarche",
     
-    "LM_NLPF_text" : "Avoir une culture des nouveaux langages et frameworks",
-    
+    "LM_NLPF_text1" : "Avoir une culture des nouveaux langages et frameworks",
+    "LM_NLPF_text2" : "Intégration en entreprise",
+    "LM_NLPF_text3" : "Effectuer une démarche de comparaison et d’analyse",
+
     "LM_DEVO_text1" : "Connaître la valeur ajoutée du DevOps par rapport à une méthodologie plus classique",
     "LM_DEVO_text2" : "Comprendre comment transformer une organisation projet vers le DevOps",
 
@@ -133,10 +138,6 @@
     "LM_DIGI_text1" : "Autour de mon expérience dans le marché de l'art avec le développement des ventes Live en direct sur Internet. Je montre comment la digitalisation d'une industrie pré-existante dans le monde physique, en l’occurrence le marché de l'art et les ventes aux enchères publiques, est un mix entre innovation et transformation.",
     "LM_DIGI_text2" : "J'aborde le sujet sous différents angles. Celui du média Interencheres et celui des commissaires-priseurs. Je tisse des parallèles avec le ecommerce et les industries de la distribution et du commerce.",
     "LM_DIGI_text3" : "Un cours qui matérialise la différence entre innovation et transformation, qui propose une approche par phase de la digitalisation d'une industrie pré-existante au web. Qui esquisse des pistes pour réussir la conduite du changement. Qui montre la nécessité de procéder d'une vision à long terme sans pour autant traîner en chemin quand les pure-players de l'Internet sont à l’affût",
-    
-    "LM_VIT2_text1" : "Discuter du modèle financier et technologique autour du Cloud",
-    "LM_VIT2_text2" : "Appréhender une démarche non sollicitée chez un client attiré par l’attrait du Business Case",
-    "LM_VIT2_text3" : "Appréhender une démarche de consulting de haut niveau chez un client avec démarche de transformation globale à grande échelle",
 
     "LM_METH_text1" : "Apprentissage de méthodes de développement",
     "LM_METH_text2" : "Formation aux modèles conceptuels sous-tendus à ces méthodes",
