[TRANSLATE] translation of the events

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -221,5 +221,11 @@
     "DIGI_JOB": "Co-founder & Manager | EXALT",
     "METH_JOB": "Head of Digital Foundry | Airbus",
     "PERS_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
-    "PERS_JOB2": "Head of Digital Foundry | Airbus"
+    "PERS_JOB2": "Head of Digital Foundry | Airbus",
+
+    "Sub_event1": "Maintain and renew the link with former students, and allow future engineers to exchange with those who preceded them: it is with this in mind that the SIGL BBQ is organized each year, bringing together teachers,\nformer students and future graduates.",
+    "Sub_event2": "Class representatives are taking the initiative to regulary organize some ecents within the major (cinema, laser game, etc.) in order to give students the opportunity to connect with each others beyond the professional environment.",
+    "Sub_event3": "To establish a culture of team cohesion and in order to boost up the dialogue between teams, moments of exchange and relaxation bringing together teachers and students are organised",
+    "Title_event4": "SIGL's Disintegration",
+    "Sub_event4": "In order to celebrate together the end of studies and the success of their year, a disintegration event is organized by the students at the end of their courses. Lastest destination is: Lisbon!"
 }
